--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "@sokratis/passport-linkedin-oauth2": "^2.1.0",
         "bluebird": "^3.5.3",
         "body-parser": "^1.18.3",
+        "connect-couchbase": "^0.2.10",
         "cookie-parser": "^1.4.4",
         "dateformat": "^3.0.3",
         "express": "^4.16.4",
@@ -16,14 +17,14 @@
         "jsonwebtoken": "^8.4.0",
         "memorystore": "^1.6.0",
         "morgan": "^1.9.1",
-        "passport": "^0.4.0",
+        "passport": "^0.4.1",
         "passport-dropbox-oauth2": "^1.1.0",
         "passport-facebook": "^3.0.0",
         "passport-github": "^1.1.0",
         "passport-google-oauth2": "^0.2.0",
         "passport-openidconnect": "^0.0.2",
         "passport-oxd": "^4.0.0",
-        "passport-saml": "^0.35.0",
+        "passport-saml": "^1.2.0",
         "passport-tumblr": "^0.1.2",
         "passport-twitter": "^1.0.4",
         "passport-windowslive": "^1.0.2",
