Package all sub-directories of the app

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -68,7 +68,7 @@ steps:
       **package.json
       **package-lock.json
       **README.md
-      **server/*
+      **server/**
       **passport-version_4.0-node_modules.tar.gz
     TargetFolder: '$(Pipeline.Workspace)/package'
 
