First attempt to use Artifacts

--- a/package.json
+++ b/package.json
@@ -23,9 +23,9 @@
         "passport-facebook": "^3.0.0",
         "passport-github": "^1.1.0",
         "passport-google-oauth2": "^0.2.0",
-        "passport-openidconnect": "^0.0.2",
+        "passport-openidconnect-sic": "^0.0.2",
         "passport-oxd": "^4.0.0",
-        "passport-saml": "^1.2.0",
+        "passport-saml-sic": "^1.2.0",
         "passport-tumblr": "^0.1.2",
         "passport-twitter": "^1.0.4",
         "passport-windowslive": "^1.0.2",
