--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,3 +17,36 @@ steps:
     command: install
     publishRegistry: useFeed
     publishFeed: 'Sign in Canada/Sign_in_Canada'
+
+- script:
+    tar -czvf passport-version_4.0-node_modules.tar.gz node_modules
+  displayName: 'Package dependencies'
+  continueOnError: true
+
+- task: CopyFiles@2
+  inputs:
+    SourceFolder: '$(Pipeline.Workspace)/s'
+    Contents:
+      **LICENSE
+      **package.json
+      **package-lock.json
+      **README.md
+      **server/**
+      **passport-version_4.0-node_modules.tar.gz
+    TargetFolder: '$(Pipeline.Workspace)/package'
+
+- script: |
+    echo 'packaging the files'
+    cd $(Pipeline.Workspace)
+    pwd
+    tar -czvf passport.tgz --exclude='*.tar.gz' package
+    mv passport.tgz package
+  displayName: 'create application tarball'
+  continueOnError: true
+
+- task: PublishPipelineArtifact@1
+  inputs:
+    targetPath: '$(Pipeline.Workspace)'
+    artifact: 'gluu-passport'
+    publishLocation: 'pipeline'
+  condition: succeededOrFailed()
