--- a/package.json
+++ b/package.json
@@ -23,9 +23,7 @@
         "passport-facebook": "^3.0.0",
         "passport-github": "^1.1.0",
         "passport-google-oauth2": "^0.2.0",
-        "passport-openidconnect-sic": "^0.0.2",
         "passport-oxd": "^4.0.0",
-        "passport-saml-sic": "^1.2.0",
         "passport-tumblr": "^0.1.2",
         "passport-twitter": "^1.0.4",
         "passport-windowslive": "^1.0.2",
@@ -35,6 +33,8 @@
         "request": "^2.88.0",
         "request-promise": "^4.2.2",
         "sha1": "^1.1.1",
+        "sic-passport-openidconnect": "^0.0.2",
+        "sic-passport-saml": "^1.3.3",
         "stomp-client": "^0.9.0",
         "uuid": "^3.3.2",
         "winston": "^3.1.0",
