--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,7 +21,7 @@ steps:
     publishFeed: 'Sign in Canada/Sign_in_Canada'
 
 - script: |
-    tar -czvf passport-version_4.0-node_modules.tar.gz node_modules
+    tar -czvf $(Build.ArtifactStagingDirectory)/passport-version_4.0-node_modules.tar.gz node_modules
   displayName: 'Package dependencies'
   continueOnError: true
 
@@ -40,14 +40,13 @@ steps:
     echo 'packaging the files'
     cd $(Pipeline.Workspace)
     pwd
-    tar -czvf passport.tgz package
-    mv passport.tgz package
+    tar -czv --owner=node --group=node f $(Build.ArtifactStagingDirectory)/passport.tgz package
   displayName: 'create application tarball'
   continueOnError: true
 
 - task: PublishPipelineArtifact@1
   inputs:
-    targetPath: '$(Pipeline.Workspace)'
+    targetPath: '$(Build.ArtifactStagingDirectory)'
     artifact: 'gluu-passport'
     publishLocation: 'pipeline'
   condition: succeededOrFailed()
