Just install for now

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,7 @@ steps:
 
 - task: Npm@1
   inputs:
-    command: publish
+    command: install
     publishRegistry: useFeed
     publishFeed: 'Sign in Canada/SignInCanada'
 
