--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-registry=https://pkgs.dev.azure.com/tbs-sct/7302639f-e704-47c3-9557-99b4e04a75bc/_packaging/SignInCanada/npm/registry/
+@sic:registry=https://pkgs.dev.azure.com/tbs-sct/7302639f-e704-47c3-9557-99b4e04a75bc/_packaging/SignInCanada/npm/registry/
 
 always-auth=true
