--- a/package.json
+++ b/package.json
@@ -34,8 +34,8 @@
         "request": "^2.88.0",
         "request-promise": "^4.2.2",
         "sha1": "^1.1.1",
-        "sic-passport-openidconnect": "^0.0.2",
-        "sic-passport-saml": "^1.4.2",
+        "@sic\passport-openidconnect": "^0.0.2",
+        "@sic\passport-saml": "^1.4.2",
         "stomp-client": "^0.9.0",
         "uuid": "^3.3.2",
         "winston": "^3.1.0",
